@@ -1,3 +1,11 @@
+2001-09-01  Michael Hope  <michaelh@juju.net.nz>
+
+	* support/regression/ports/host/spec.mk: Updated to compile with the new type specifiers.
+
+	* device/lib/Makefile.in (Z80SOURCES): Removed old _mululong, _mulslong, and unneeded _mulint.
+
+	* device/lib/_mullong.c (_mulslong): Changed to actually return a value :)
+
 2001-08-30  Paul Stoffregen  <paul@pjrc.com>
 
 	* added peepholes 223 to 231 to mcs51 port.  These improve code when using large model.
